implementing Alessandro's comments

--- a/sections/AnalysisOverview.tex
+++ b/sections/AnalysisOverview.tex
@@ -4,4 +4,4 @@
 \section{Goals}
 \label{sec:Analysis_Goals}
 
-The primary goal of the analysis is to measure the differential cross-sections of $ZZ ( \rightarrow 4\ell) jj$ processes as a function of several kinematic observables sensitive to the EWK production mode. The clean final state provides an invaluable avenue to study the rare electroweak production mode, which is experimentally accessible for the first time with LHC Run-2 statistics. The differential cross-sections are measured in the VBS-enhanced phase space and compared to the most precise SM predictions. For simpler re-interpretation in the future without ATLAS detector simulations, the differential cross-sections are measured at a particle level using an unfolding technique, which removes the detector effects, such as limited efficiency and resolution. As discussed in Section \ref{sec:EWKPheno}, the electroweak production of $ZZ ( \rightarrow 4\ell) jj$ consists of contributions from VBS and is sensitive to possible BSM effects. Therefore, the unfolded differential cross-sections are used to constrain parameters of BSM physics which modifies the quartic self-interactions of the vector bosons shown in Figure \ref{fig:ZZjjFeynmanDiag_EWk_b}.
+The primary goal of this analysis is to measure the differential cross-section of $ZZ^*(\rightarrow 4\ell) jj$ processes as a function of several kinematic observables sensitive to the EWK production mode. The clean final state provides an invaluable avenue to study the rare electroweak production mode, which is experimentally accessible for the first time with LHC Run-2 statistics. The differential cross-sections are measured in a VBS-Enhanced region within a fiducial phase space that falls under the physical acceptance of the detector. For simpler re-interpretation in the future without ATLAS detector simulations, the differential cross-sections are measured at the particle-level using an unfolding technique, which removes the detector effects, such as limited efficiency and resolution. The measured cross-sections are then compared to the most precise SM predictions. As discussed in Section \ref{sec:EWKPheno}, the electroweak production of $ZZ^*(\rightarrow 4\ell) jj$ consists of contributions from VBS and is sensitive to possible BSM effects. Therefore, the unfolded differential cross-sections are used to constrain parameters of BSM physics, modifying the quartic self-interactions of the vector bosons as shown in Figure \ref{fig:ZZjjFeynmanDiag_EWk_b}.
