--- a/sections/Analysis_Systematics.tex
+++ b/sections/Analysis_Systematics.tex
@@ -28,7 +28,7 @@ The experimental uncertainties on recently published cross-section measurements 
 
 \end{itemize}
 
-As shown above, the theoretical uncertainties are process specific and are evaluated separately for each MC sample. The theory uncertainties need to be propagated to the unfolded cross-section measurements. For each theory uncertainty, variation-applied particle and detector-level predictions are built by substituting the varied distribution for the selected process instead of the nominal one. The variation-applied detector level prediction is unfolded using the unfolding inputs from nominal SM predictions. For each variation, the difference of variation-applied unfolded result from the variation-applied truth MC prediction gives the systematic uncertainty. In general, the theoretical variations significantly affect the predicted particle-level and detector-level predictions; however, they have a negligible impact on the shape of the distributions. Since the variation is applied to both detector and particle level yields, the resulting uncertainties from theory systematics on the unfolded cross-sections are small.
+As shown above, the theoretical uncertainties are process specific and are evaluated separately for each MC sample. The theory uncertainties need to be propagated to the unfolded cross-section measurements. For each theory uncertainty, variation-applied particle and detector-level predictions are built by substituting the varied distribution for the selected process instead of the nominal one. The variation-applied detector-level prediction is unfolded using the unfolding inputs from nominal SM predictions. For each variation, the difference of variation-applied unfolded result from the variation-applied truth MC prediction gives the systematic uncertainty. In general, the theoretical variations significantly affect the predicted particle-level and detector-level predictions; however, they have a negligible impact on the shape of the distributions. Since the variation is applied to both detector and particle-level yields, the resulting uncertainties from theory systematics on the unfolded cross-sections are small.
 
 \subsection{Experimental Uncertainties}
 \label{subsec:ExpUnc}
@@ -63,8 +63,8 @@ tool $\textit{ElectronEffciencyCorrection} \footnote{https://gitlab.cern.ch/atla
 
 \textbf{Other Experimental Uncertainties: }
 \begin{itemize}
-    \item{\textbf{Pileup Reweighting:} As discussed in Section \ref{subsec:EventWt}, the MC predictions are reweighted to match the pile-up profile of data. A single $1\times2$ nuisance parameter accounts for upward and downward variations in the factors used for pile-up reweighting. }
-    \item{\textbf{Luminosity:} As discussed in Section \ref{subsec:Dataset}, the uncertainty in the collected integrated luminosity of $139 fb^{-1}$ is $\pm1.7\%$, which is applied as a flat variation to both particle and detector level yields. } 
+    \item{\textbf{Pile-up Reweighting:} As discussed in Section \ref{subsec:EventWt}, the MC predictions are reweighted to match the pile-up profile of data. A single $1\times2$ nuisance parameter accounts for upward and downward variations in the factors used for pile-up reweighting. }
+    \item{\textbf{Luminosity:} As discussed in Section \ref{subsec:Dataset}, the uncertainty in the collected integrated luminosity of $139 fb^{-1}$ is $\pm1.7\%$, which is applied as a flat variation to both particle and detector-level yields. } 
 \end{itemize}
 
 The experimental uncertainties affect all detector-level MC predictions and the estimate of the fake backgrounds. The experimental uncertainties are propagated to the unfolded cross-sections. For each systematic variation, signal ($qqZZ+ggZZ+EWK~qqZZjj$) and background ($ttV+VVV$) distribution variation-applied detector-level prediction is built. The variation is also applied to the fake background estimate. The variation-applied background (MC + fakes) are subtracted from the variation-applied total MC prediction and then unfolded using the unfolding inputs from the nominal SM prediction. The individual systematic uncertainty corresponds to the difference between the variation-applied and nominal unfolded distributions for each variation.  
@@ -76,9 +76,9 @@ The following two uncertainties are intrinsic to the unfolding process itself an
 \begin{itemize}
     \item{\textbf{Unfolding Bias:} The inherent unfolding bias can be estimated either using the data-driven method discussed in Section \ref{subsec:Bias} or using an MC-toy-based method. It is the most significant source of systematic uncertainty for the measurement. Both methods yield similar results. However, the MC-toy-based method is free from the influence of statistical fluctuation in data and thus is chosen as the systematic uncertainty on the intrinsic unfolding bias. 
 
-    First, ten thousand toys are constructed from the truth level MC distribution, independently fluctuating each bin of the truth distribution with a random number extracted from a Gaussian with mean zero and variance of $N_{truth}^{bin}$. A pseudo-detector-level dataset is created by \textit{folding} using the nominal response from MC. Folding is a technique to create a detector level distribution from the MC by applying the detector's limited acceptance and inefficiencies, adding detector resolution-induced bin migration between the truth and detector level distributions, and including the contribution of the fiducial fakes. The pseudo dataset is then unfolded using the nominal unfolding inputs and plotted as the average bias of the toys as a function of the toy's truth-level yield. The final unfolding bias is the value where this distribution intersects with the $68.3\%$ confidence interval of the toys' actual value. Figure \ref{fig:UnfoldingBias_mjj_VBSEnhanced} shows the unfolding bias evaluated in each bin of $m_{jj}$ in the VBS-Enhanced region, estimated using the MC-toy-based approach. The unfolding bias ranges from $8-15\%$ in different bins.%, similar to what was observed using the data-driven method. 
+    First, ten thousand toys are constructed from the truth level MC distribution, independently fluctuating each bin of the truth distribution with a random number extracted from a Gaussian with mean zero and variance of $N_{truth}^{bin}$. A pseudo-detector-level dataset is created by \textit{folding} using the nominal response from MC. Folding is a technique to create a detector-level distribution from the MC by applying the detector's limited acceptance and inefficiencies, adding detector resolution-induced bin migration between the truth and detector-level distributions, and including the contribution of the fiducial fakes. The pseudo dataset is then unfolded using the nominal unfolding inputs and plotted as the average bias of the toys as a function of the toy's truth-level yield. The final unfolding bias is the value where this distribution intersects with the $68.3\%$ confidence interval of the toys' actual value. Figure \ref{fig:UnfoldingBias_mjj_VBSEnhanced} shows the unfolding bias evaluated in each bin of $m_{jj}$ in the VBS-Enhanced region, estimated using the MC-toy-based approach. The unfolding bias ranges from $8-15\%$ in different bins.%, similar to what was observed using the data-driven method. 
 
-    \begin{figure}[htb]
+    \begin{figure}[!htb]
         \centering
         \begin{subfigure}{.48\textwidth}
             \centering
@@ -112,11 +112,11 @@ The following two uncertainties are intrinsic to the unfolding process itself an
 
     \item{\textbf{QCD $qqZZ$ Modeling Uncertainty:} There are known differences in predictions from different generators caused by differences in parton shower and hadronization modeling. Therefore, the second source of unfolding systematics is required to account for the differences in the unfolding input modeling, which is estimated by varying the prediction of the dominant QCD $qqZZ$ process. To avoid double-counting of the unfolding method covered by the unfolding bias, an alternative $qqZZ$ sample predicted by \textsc{MadGraph5} is first reweighted to match the nominal-\textsc{Sherpa} lineshape. The relative difference in reweighted detector-level distribution is unfolded using the inputs from nominal-\textsc{Sherpa} and compared with the reweighted-\textsc{MadGraph5} particle-level distribution. The relative difference between these two distributions is taken as modeling systematic uncertainty. Figure \ref{fig:QCDModelUnc} shows the estimation of the modeling uncertainty for $m_{jj}$ in the VBS-Enhanced region. The ratio panel of the right plot shows the QCD modeling uncertainties, which range from $2-4\%$ varying in different bins.
     
-    \begin{figure}
+    \begin{figure}[!htb]
         \centering
         \includegraphics[width=.48\linewidth]{figures/Analysis/Systematics/QCDmodel_Dist.pdf}
         \includegraphics[width=.48\linewidth]{figures/Analysis/Systematics/QCDmodel_Unc.pdf}
-        \caption{The left plot shows detector level predictions of $m_{jj}$ in VBS-Enhanced region predicted by \textsc{Sherpa}, \textsc{Madgraph} and \textsc{Madgraph} reweighted to match the \textsc{Sherpa} lineshape. The right plot shows reweighted-\textsc{MadGraph5} detector-level (blue) distribution, which is unfolded (black) using unfolding inputs from nominal-\textsc{Sherpa} and compared to the particle-level reweighted-\textsc{MadGraph5} distribution (red). The ratio panel of the right plot showing the ratio between reweighted truth-level \textsc{MadGraph5} and reweighted unfolded-level \textsc{MadGraph5} gives the QCD modeling uncertainties. \label{fig:QCDModelUnc}}
+        \caption{The left plot shows detector-level predictions of $m_{jj}$ in VBS-Enhanced region predicted by \textsc{Sherpa}, \textsc{Madgraph} and \textsc{Madgraph} reweighted to match the \textsc{Sherpa} lineshape. The right plot shows reweighted-\textsc{MadGraph5} detector-level (blue) distribution, which is unfolded (black) using unfolding inputs from nominal-\textsc{Sherpa} and compared to the particle-level reweighted-\textsc{MadGraph5} distribution (red). The ratio panel of the right plot showing the ratio between reweighted truth-level \textsc{MadGraph5} and reweighted unfolded-level \textsc{MadGraph5} gives the QCD modeling uncertainties. \label{fig:QCDModelUnc}}
  \end{figure}  
 
     }
