--- a/sections/Conclusion.tex
+++ b/sections/Conclusion.tex
@@ -3,11 +3,11 @@
 \section{Conclusion}
 \label{sec:Conclusion}
 
-Vector boson scattering is a critical phenomenon in the electroweak sector of the Standard Model of particle physics. Vector boson scattering processes include rare triple and quartic self-couplings of the electroweak gauge bosons whose production rate at high energies is sensitive to possible modifications from physics beyond the Standard Model. The quartic gauge-self-couplings are experimentally accessible for the first time with the ATLAS datasets of $139 ~fb^{-1}$ recorded during the $2015-2018$ data-taking period. The presence of clean signature of two same-flavor, opposite-sign lepton pairs in the $ZZ (\rightarrow 4\ell) jj$ final state with minor contributions from background processes offers an excellent avenue to studying the high energy behavior of the vector boson scattering. However, given the low production cross-section of electroweak $ZZjj$ and small branching ratio of $Z\rightarrow e^+e^- (\mu^+\mu^-)$, these processes are statistically limited with the current dataset. Therefore, unfolded differential cross-section measurements of $ZZ (\rightarrow 4\ell) jj$ in an electroweak enhanced phase-space are measured as a function of eleven kinematic observables and compared to the state-of-the-art Standard Model predictions. The measured cross-sections agree with the theoretical predictions within the experimental and statistical uncertainties. The unfolded cross-sections are then used to put competitive constraints on beyond the Standard Model effects using a model-independent, effective field theory approach. 
+Vector boson scattering is a critical phenomenon in the electroweak sector of the Standard Model of particle physics. Vector boson scattering processes include rare triple and quartic self-couplings of the electroweak gauge bosons whose production rate at high energies is sensitive to possible modifications from physics beyond the Standard Model. The quartic gauge-self-couplings are experimentally accessible for the first time with the ATLAS datasets of $139 ~fb^{-1}$ recorded during the $2015-2018$ data-taking period. The presence of clean signature of two same-flavor, opposite-sign lepton pairs in the $ZZ^*(\rightarrow 4\ell) jj$ final state with minor contributions from background processes offers an excellent avenue to studying the high energy behavior of the vector boson scattering. However, given the low production cross-section of electroweak $ZZjj$ and small branching ratio of $Z\rightarrow e^+e^- (\mu^+\mu^-)$, these processes are statistically limited with the current dataset. Therefore, unfolded differential cross-section measurements of $ZZ^*(\rightarrow 4\ell) jj$ in an electroweak enhanced phase-space are measured as a function of eleven kinematic observables and compared to the state-of-the-art Standard Model predictions. The measured cross-sections agree with the theoretical predictions within the experimental and statistical uncertainties. The unfolded cross-sections are then used to put competitive constraints on beyond the Standard Model effects using a model-independent, effective field theory approach. 
 
 \section{Outlook}
 \label{sec:Outlook}
 
-With Run-2 datasets, the electroweak production of several multiboson processes such as VBS same-sign $WW$ \cite{EWk_ssWW}, VBS $WWW$ \cite{EWK_WWW}, VBS WZ \cite{EWK_WZ}, and VBS ZZ \cite{ATLASZZjj} were experimentally observed for the first time with the ATLAS experiment. These VBS measurements are still statistically dominated and could gain higher precision from more extensive statistics. The third physics operation of LHC after three years of upgrade started in July of 2022 and is expected to continue until 2025 at the highest to date center-of-mass-energy of proton-proton collisions, at $\sqrt{s}=13.6$ TeV \cite{Run3}. In Run-3, the ATLAS experiment is expected to record more than twice the dataset of Run-2 corresponding to the integrated luminosity of $300 ~fb^{-1}$. Run-3 statistics are crucial to study the cross-sections of any VBS processes differentially. The Run-3 datasets are expected to make the differential cross-sections measurement of the fully electroweak $ZZ(\rightarrow 4\ell) jj$ process statistically feasible and put stringer constraints on the BSM parameters causing anomalous self-interactions of the gauge bosons. 
+With Run-2 datasets, the electroweak production of several multiboson processes such as VBS same-sign $WW$ \cite{EWk_ssWW}, VBS $WWW$ \cite{EWK_WWW}, VBS WZ \cite{EWK_WZ}, and VBS ZZ \cite{ATLASZZjj} were experimentally observed for the first time with the ATLAS experiment. These VBS measurements are still statistically dominated and could gain higher precision from more extensive statistics. The third physics operation of LHC after three years of upgrade started in July of 2022 and is expected to continue until 2025 at the highest to date center-of-mass-energy of proton-proton collisions, at $\sqrt{s}=13.6$ TeV \cite{Run3}. In Run-3, the ATLAS experiment is expected to record more than twice the dataset of Run-2 corresponding to the integrated luminosity of $300 ~fb^{-1}$. Run-3 statistics are crucial to study the cross-sections of any VBS processes differentially. The Run-3 datasets are expected to make the differential cross-sections measurement of the fully electroweak $ZZ^*(\rightarrow 4\ell) jj$ process statistically feasible and put stringer constraints on the BSM parameters causing anomalous self-interactions of the gauge bosons. 
 
 However, high-luminosity LHC discussed briefly in Section \ref{subsec:HLLHC} is expected to be a golden era for the vector boson scattering measurements. The ATLAS experiment is expected to record about ten times more data and more precise reconstruction of the forward jets, essential physics objects defining the VBS processes, which is driven by the extended $\eta$ coverage of the inner tracker and the additional timing information from the high granularity timing detectors. With the extensive statistics and the unprecedented proton-proton collisions at a center-of-mass energy of $\sqrt{s}=14$ TeV at HL-LHC, the scattering of the longitudinally polarized vector bosons is expected to be within the experimental reach \cite{ssWW_HLLHCProspects}. As discussed in Section \ref{sec:EWKPheno}, the self-interactions of the longitudinally polarized vector bosons are regularized by the Higgs-mediated processes to restore the unitarity at high energies. Therefore, the ultimate goal of the Standard Model electroweak multiboson processes is to experimentally measure the cross-sections of VBS processes for longitudinally polarized vector bosons.
