--- a/sections/LHC.tex
+++ b/sections/LHC.tex
@@ -7,7 +7,7 @@ The first run of the LHC, Run-1, started in $2010$ at a center-of-mass energy of
 
 Accelerating the proton to the desired high center-of-mass energy is a multi-step process shown schematically in Figure \ref{fig:ProtonAcc}. First, the protons are created from hydrogen gas by removing the electrons through ionization with an intense electric field. A proton beam is then formed in LINAC 2 linear accelerator and injected into the circular PS Booster, which accelerates the $50$ MeV proton to energies of $1.4$ GeV \cite{LHCGuide}. The beams are then injected into the Proton Synchroton (PS), accelerating them to energies of $25$ GeV \cite{LHCGuide}. The proton beams are then injected into the Super Proton Synchroton (SPS) to further accelerate at $450$ GeV energies and injected into the main LHC rings. The two opposite proton beams reach the desired final energy of $6.5$ TeV using radio frequency (RF) acceleration cavities \cite{LHCGuide}. The accelerated proton beams are maintained for several hours of data-taking.
 
-\begin{figure}
+\begin{figure}[!htb]
     \centering
     \includegraphics[width=.98\linewidth]{figures/LHC/ProtonAccelerator.jpeg}
     \caption{ A detailed layout of multiple-steps that goes into proton acceleration before entering the main LHC ring \cite{ProtonAcclerator}.\label{fig:ProtonAcc}}
