--- a/sections/ListOfAbb.tex
+++ b/sections/ListOfAbb.tex
@@ -1,3 +1,5 @@
+\textbf{\Large{List of Abbreviations}}
+
 \begin{itemize}
 \item{ATLAS: A Torodial LHC Apparatus}
 \item{aQGC: anamolous Quartic Gauge Couplings} 
