--- a/sections/Results.tex
+++ b/sections/Results.tex
@@ -1,7 +1,7 @@
 \part {\LARGE{Results}}
 \label{sec:Results}
 
-This chapter presents the main results of this thesis. Section \ref{sec:DetectorLevel_Measurement} presents the detector level measurements of the eleven kinematic observables introduced in Section \ref{sec:Obs}, whereas Section \ref{sec:DifferentialxS} presents the unfolded differential cross-sections. Section \ref{sec:EFT} reinterprets the unfolded cross-sections shown in Section \ref{sec:DifferentialxS} to constrain parameters of physics beyond the SM affecting the quartic gauge vertices of electroweak $ZZjj$ production. 
+This chapter presents the main results of this thesis. Section \ref{sec:DetectorLevel_Measurement} presents the detector-level measurements of the eleven kinematic observables introduced in Section \ref{sec:Obs}, whereas Section \ref{sec:DifferentialxS} presents the unfolded differential cross-sections. Section \ref{sec:EFT} reinterprets the unfolded cross-sections shown in Section \ref{sec:DifferentialxS} to constrain parameters of physics beyond the SM affecting the quartic gauge vertices of electroweak $ZZjj$ production. 
 
 \input{sections/Results_DetectorLevelMeasurements}
 \input{sections/Results_DifferentialCrossSections}
