--- a/sections/theory_StandardModel.tex
+++ b/sections/theory_StandardModel.tex
@@ -14,7 +14,7 @@ The SM also respects CPT symmetry, a combination of three additional discrete sy
 \subsection{Particles and Fields}
 \label{subsec:Constituents}
 
-\begin{figure}[H]
+\begin{figure}[!htb]
     \centering
     \includegraphics[width=0.7\textwidth] {figures/Theory/SMparticles.pdf}\hspace{1cm}
     \caption{ The seventeen fundamental particles of the SM include three generations of twelve fermions, four gauge bosons, and the scalar Higgs bosons. \cite{SMFigureWiki}}
