--- a/sections/Analysis_ObjectReconstruction.tex
+++ b/sections/Analysis_ObjectReconstruction.tex
@@ -1,14 +1,14 @@
-\section{Detector Level Object Selection}
+\section{Detector-Level Object Selection}
 \label{sec:ObjReconstruction}
 
-This section summarizes the detector-level selections applied to the three physics objects, electrons, muons, and jets used in the measurement. Each physics object of the analysis has two categories: \textit{baseline} and \textit{signal}. Physics objects satisfying a set of kinematic selections or looser identification criteria are categorized as \textit{baseline}. In contrast, the baseline objects that pass either stricter kinematic selections or additional isolation and track-to-vertex association (TTVA) requirements are categorized as \textit{signal objects}.
+This section summarizes the detector-level selections applied to the three physics objects, electrons, muons, and jets used in the measurement. These kinematic requirements ensure that only high-quality physics objects relevant to the $ZZ^*(\rightarrow 4\ell) jj$ production are selected for the final measurement. Each physics object considered in the analysis is categorized as \textit{baseline} or \textit{signal}. Physics objects satisfying a set of kinematic selections or looser identification criteria are categorized as \textit{baseline}. In contrast, the baseline objects that pass either stricter kinematic selections or additional isolation and track-to-vertex association (TTVA) requirements are categorized as \textit{signal objects}.
 
 \subsection{Electrons}
 \label{subsec:ElecRecon}
 
-As discussed in Section \ref{subsec:ParticleRecon_Elec}, electrons are reconstructed by matching the inner detector track to an energy cluster in the electromagnetic calorimeter. Baseline electron objects are required to satisfy the kinematic selections of $\Pt~ > 7$ GeV $ \&~ |\eta| < 2.47$ and a loose likelihood identification working point of \textit{LHVeryLoose}. To avoid the wrongfully identified electrons reconstructed from pile-up tracks matched to the calorimeter cluster, a loose vertex association requirement of $|z_{0}\sin\theta| < 0.5 $ mm is applied to the baseline electron candidates.
+Baseline electron objects are required to satisfy the kinematic selections of $\Pt > 7$ GeV and $|\eta| < 2.47$ and a loose likelihood identification working point of \textit{LHVeryLoose}. Some electrons are reconstructed by matching the pile-up tracks to the calorimeter cluster deposit. A loose vertex association requirement of $|z_{0}\sin\theta| < 0.5 $ mm is applied to the baseline electron candidates to avoid these wrongfully reconstructed electrons. 
 
-Signal electrons are required to pass a more stringent loose likelihood identification, \textit{LHLooseBL}, which requires at least one hit in the innermost layer of the pixel detector (IBL). The signal electrons are distinguished by requiring the impact parameter significance of the baseline electrons to be $d_{0}/ \dZeroSig < 5$ and an isolation working point identification of \textit{LooseVarRad}. Table \ref{tab:Electron_RecoSel} summarizes the several selections imposed to define the baseline and signal electrons.
+Signal electrons are required to pass a more stringent loose likelihood identification, \textit{LHLooseBL}, which requires at least one hit in the innermost layer of the pixel detector (IBL). The signal electrons are distinguished by tightening the impact parameter significance of the baseline electrons to $d_{0}/ \dZeroSig < 5$ and requiring an additional isolation working point identification of \textit{LooseVarRad} defined in Section \ref{subsec:ParticleRecon_Elec}. Table \ref{tab:Electron_RecoSel} summarizes the several kinematic selections imposed to define the baseline and signal electrons.
 
 \begin{table}[ht]
     \centering
@@ -17,7 +17,7 @@ Signal electrons are required to pass a more stringent loose likelihood identifi
         \hline
         Selection Category & \textbf{Baseline} & \textbf{Signal} \\
         \hline\hline
-        Kinematic cuts & $p_{T}~ > 7$ GeV & $ p_{T}~ > 7$ GeV \\
+        Kinematic cuts & $p_{T} > 7$ GeV & $ p_{T} > 7$ GeV \\
                     & $|\eta| < 2.47$  &  $|\eta| < 2.47$\\
         \hline  
         Identification & LHVeryLoose & LHLooseBL \\
@@ -33,7 +33,7 @@ Signal electrons are required to pass a more stringent loose likelihood identifi
 
 \subsection{Muons}
 \label{subsec:MuonRecon}
-As discussed in Section \ref{subsec:ParticleRecon_Muon}, different types of muons are reconstructed utilizing information from the inner detector, the muon spectrometer, and the calorimeters. All baseline muons are required to satisfy $ |\eta| < 2.7 $, $p_{T} > 5$ GeV, a loose impact parameter requirements of $|z_{0}\sin\theta| < 0.5 $ mm, and \textit{Loose} identification working point. The signal muons are identified from the baseline muons by requiring additional isolation identification of \textit{PflowLooseVarRad} and TTVA requirements of $d_{0}/\sigma_{d_{0}} < 3$. Table \ref{tab:muon_baseline_signal} summarizes baseline and signal muons selection requirements.
+Baseline muons are required to satisfy $ |\eta| < 2.7 $, $p_{T} > 5$ GeV, a loose impact parameter requirements of $|z_{0}\sin\theta| < 0.5 $ mm, and \textit{Loose} identification working point. The signal muons are identified from the baseline muons by requiring additional isolation identification of \textit{PflowLooseVarRad} defined in Section~\ref{subsec:ParticleRecon_Muon} and tightening the TTVA requirements to $d_{0}/\sigma_{d_{0}} < 3$. Table \ref{tab:muon_baseline_signal} summarizes the baseline and signal muons selection requirements.
 
 \begin{table}[ht]
     \centering
@@ -42,8 +42,8 @@ As discussed in Section \ref{subsec:ParticleRecon_Muon}, different types of muon
         \hline
         Selection Category & \textbf{Baseline} & \textbf{Signal} \\
         \hline\hline
-        Kinematic cuts & $p_{T}~ > 5$ GeV & $p_{T}~ > 5$ GeV \\
-                    & Calo-tagged $ p_{T}~ > 15$ GeV & Calo-tagged $ p_{T}~ > 15$ GeV \\
+        Kinematic cuts & $p_{T} > 5$ GeV & $p_{T} > 5$ GeV \\
+                    & Calo-tagged $ p_{T} > 15$ GeV & Calo-tagged $ p_{T} > 15$ GeV \\
               & $|\eta| < 2.7$ & $|\eta| < 2.7$\\
         \hline
         Identification & Loose & Loose \\
@@ -58,10 +58,10 @@ As discussed in Section \ref{subsec:ParticleRecon_Muon}, different types of muon
 \end{table}
 
 \subsection{Jets}
-\label{subsec:JetRecon}
-Jets are reconstructed with the particle flow anti$-K_{T}$ clustering algorithm using a radius parameter of $R = 0.4$ as discussed in Section \ref{subsec:ParticleRecon_Jets}. The reconstructed jets that meet $p_{T}~ > 15$ GeV and $ |\eta| < 4.5 $ kinematic requirements are classified as baseline jets. Baseline jets in $ |\eta| < 2.4 $ satisfying the \textit{Tight} working point of the \textit{Jet-vertex-tagger (JVT)} tool, and in $ |\eta| > 2.5 $ satisfying the \textit{Tight} working point of \textit{forward-jet-vertex-tagger (fJVT)} tool are classified as signal jets. Table \ref{tab:jets} summarizes the details of baseline and signal jets selection. 
+\label{subsec:JetRecon} 
+As discussed in Section \ref{sec:EWKPheno}, the jets from the EWK $ZZjj$ production are highly energetic; thus, reconstructed jets are required to have $p_{T} > 30$ GeV. The jet energy scale and resolution calibration discussed in Section \ref{subsec:ParticleRecon_Jets} is only valid for jets within $ |\eta| < 4.5 $ region. Therefore, the baseline jets are required to be in the $ |\eta| < 4.5 $ region. Baseline jets in $ |\eta| < 2.4 $ satisfying the \textit{Tight} working point of the \textit{Jet-vertex-tagger (JVT)} tool, and in $ |\eta| > 2.5 $ satisfying the \textit{Tight} working point of \textit{forward-jet-vertex-tagger (fJVT)} tool are classified as signal jets. Table \ref{tab:jets} summarizes the details of baseline and signal jets selection. 
 
-A particular type of jets \textit{b-jets}, containing b-hadrons initiated from a b-quark, are also used for the background estimation. The b-jets reconstruction relies on multivariate analysis (MVA), utilizing the fact that b-hadrons have a long mean lifetime of order picoseconds, leading to a displaced secondary vertex in the detectors. A tagger discussed in detail in Ref \cite{bTagging} with b-tagging efficiency of $77\%$ is used in the analysis to identify the b-jets.
+A particular type of jets, the \textit{b-jets}, containing b-hadrons initiated from a b-quark, is also used for the background estimation. The b-jets reconstruction relies on multivariate analysis (MVA), utilizing the fact that b-hadrons have a long mean lifetime ( $~1$ picosecond), leading to a displaced secondary vertex in the detectors. A tagger discussed in detail in Ref \cite{bTagging} with b-tagging efficiency of $77\%$ is used in the analysis to identify b-jets.
 
 \begin{table}[ht]
     \centering
@@ -72,8 +72,6 @@ A particular type of jets \textit{b-jets}, containing b-hadrons initiated from a
         \hline\hline
         Kinematic cuts & $\Pt~ > 30$ GeV & $\Pt~ > 30$ GeV \\
              & $|\eta| < 4.5$ & $|\eta| < 4.5$\\
-        \hline 
-        Identification & AntiKt4EMPFlow & AntiKt4EMPFlow\\
         \hline
         Jet-Vertex-Tagger & $-$ & $ |\eta| < 2.4 $ JVT ("Tight")\\
                 & $-$ & $|\eta| > 2.5 $ fJVT ("Tight")\\
@@ -84,7 +82,7 @@ A particular type of jets \textit{b-jets}, containing b-hadrons initiated from a
 \subsection{Overlap Removal}
 \label{subsec:OR}
 
-In order to avoid double-counting detector signals in the reconstruction of physics objects, an \textit{overlap removal} procedure is applied to remove the physics objects reconstructed from the same detector signal. The measurement uses a lepton-favored overlap removal which selects leptons over jets. Overlap removal is an iterative process in which only objects surviving all previous steps are used in the subsequent steps. Table \ref{tab:overlap_removal} summarizes the overlap removal steps, where the $\Delta R$ is the angular separation between objects calculated using rapidity.
+In order to avoid double-counting, an \textit{overlap removal} procedure is applied to remove physics objects reconstructed from the same detector signal. The measurement uses a lepton-favored overlap removal which selects leptons over jets. Overlap removal is an iterative process in which only objects surviving all previous steps are used in the subsequent steps. Table \ref{tab:overlap_removal} summarizes the overlap removal steps, where the $\Delta R$ is the angular separation between objects calculated using rapidity.
 
 \begin{table}[ht]
     \centering
@@ -94,7 +92,7 @@ In order to avoid double-counting detector signals in the reconstruction of phys
         Remove Object & Accept Object & Overlap Criteria \\
         \hline\hline
         Electron & Electron & Share a track or have overlapping calorimeter cluster.\\
-                &       & Keep electron with higher $p_{T}~$\\
+                &       & Keep electron with higher $p_{T}$\\
         \hline
         Muon & Electron & Share ID track, and the muon is calo-tagged\\
         \hline
