--- a/sections/Appendix.tex
+++ b/sections/Appendix.tex
@@ -1,10 +1,10 @@
 \section{Personal Contribution}
 \label{Appendix:Contribution}
 
-\subsection{Contribution to $ZZ(\rightarrow 4\ell)jj$ Measurement} 
+\subsection{Contribution to $ZZ^*(\rightarrow 4\ell)jj$ Measurement} 
 \label{subsec:ZZjjContr}
 
-The measurement presented in this thesis is only possible from the effort of the entire analysis team. I am one of the two primary analyzers who have contributed to several measurement areas from its initial formation to the current stage of finalization and publication. I contributed significantly to defining the analysis phase space discussed in Chapter $IV$. The phase space defined in the preceding ATLAS analysis \cite{ATLASZZjj}, which observed the electroweak $ZZjj$ process was not optimal for differential measurement. Therefore, I worked on loosening the kinematic selections to increase the acceptance, defining the isolation working point to maintain optimal signal-selection and background-rejection probabilities, and establishing novel pair sorting strategy to reduce the bin migration in unfolding. Moreover, I was responsible for maintaining the main analysis framework, which implements the latest recommendations from combined performance groups for physics object reconstruction discussed in Chapter $III$, and applies most of the kinematic cuts for object and event selection discussed in Chapter $IV$. This framework applies all the scale factors and event weights in MC events. It selects a few hundred relevant physics events that pass all kinematic selections for both data and MC. Additionally, I estimated the fake backgrounds of the analysis using the background estimation technique discussed in Section \ref{sec:Bkg} and assisted in selecting relevant systematics discussed in Section \ref{sec:Uncertainties} of Chapter $V$. I also validated the novel next-to-leading-order \textsc{Powheg} $qqZZjj$ MC sample used as the primary sample for the electroweak production of $ZZ(\rightarrow 4\ell)jj$. 
+The measurement presented in this thesis is only possible from the effort of the entire analysis team. I am one of the two primary analyzers who have contributed to several measurement areas from its initial formation to the current stage of finalization and publication. I contributed significantly to defining the analysis phase space discussed in Chapter $IV$. The phase space defined in the preceding ATLAS analysis \cite{ATLASZZjj}, which observed the electroweak $ZZjj$ process was not optimal for differential measurement. Therefore, I worked on loosening the kinematic selections to increase the acceptance, defining the isolation working point to maintain optimal signal-selection and background-rejection probabilities, and establishing novel pair sorting strategy to reduce the bin migration in unfolding. Moreover, I was responsible for maintaining the main analysis framework, which implements the latest recommendations from combined performance groups for physics object reconstruction discussed in Chapter $III$, and applies most of the kinematic cuts for object and event selection discussed in Chapter $IV$. This framework applies all the scale factors and event weights in MC events. It selects a few hundred relevant physics events that pass all kinematic selections for both data and MC. Additionally, I estimated the fake backgrounds of the analysis using the background estimation technique discussed in Section \ref{sec:Bkg} and assisted in selecting relevant systematics discussed in Section \ref{sec:Uncertainties} of Chapter $V$. I also validated the novel next-to-leading-order \textsc{Powheg} $qqZZjj$ MC sample used as the primary sample for the electroweak production of $ZZ^*(\rightarrow 4\ell)jj$. 
 
 \subsection{Contribution to the ATLAS Experiment}
 \label{subsec:ATLASContr}
@@ -14,14 +14,14 @@ I have been a member of the ATLAS collaboration since $2017$ and have contribute
 I spent my first year as a graduate student working at Brookhaven National Lab, where I contributed to the prototype development of the all-silicon inner tracker for the high luminosity LHC. During this period, I assembled the first three prototype staves, the detector units of the ITk strip barrel region detector, using a semi-automated loading setup consisting of an Aeoretch robotic arm, cameras, and an alignment system. I developed a $3D$-printed tooling pins used in the alignment of loading the sensors on staves. I led comprehensive thermal and mechanical tests of the first prototype, the thermo-mechanical stave using IR imaging and laser metrology, respectively. These tests validated the cooling system designs of the ITk stave core structure and the stability of the mechanical design, giving the green light for the production of $200$ out of $400$ strip-staves needed to build the barrel region of the inner tracker. During this year, I learned the fundamentals of particle physics detectors, their development, and their operations.  
 
 \textbf{Physics Analysis:}
-Apart from the $ZZ(\rightarrow 4\ell)jj$ analysis presented in this thesis, I have worked on two other ATLAS analyses involving four leptons in the final state, analyzing the full Run-2 dataset. After my Ph.D. candidacy and ATLAS qualification, I joined the inclusive four-lepton measurement analysis team, whose goal was to inclusively measure the differential unfolded cross-sections of the Standard Model four-lepton process. In a year as a part of the team, I worked on finding the suitable lepton isolation working points, studying the impact of including electrons and muons originating from tau leptons in the unfolded differential cross-sections, and the most precise measurement to date of the branching ratio of $ Z \to 4\ell$.
+Apart from the $ZZ^*(\rightarrow 4\ell)jj$ analysis presented in this thesis, I have worked on two other ATLAS analyses involving four leptons in the final state, analyzing the full Run-2 dataset. After my Ph.D. candidacy and ATLAS qualification, I joined the inclusive four-lepton measurement analysis team, whose goal was to inclusively measure the differential unfolded cross-sections of the Standard Model four-lepton process. In a year as a part of the team, I worked on finding the suitable lepton isolation working points, studying the impact of including electrons and muons originating from tau leptons in the unfolded differential cross-sections, and the most precise measurement to date of the branching ratio of $ Z \to 4\ell$.
 
-Since early 2021, I have been a crucial part of the on-shell $ZZ$ CP and polarization analysis team, where the main goal is to extract the fraction of two $Z$ bosons simultaneously longitudinally polarized and search for additional CP violation. Like the $ZZ(\rightarrow 4\ell)jj$ analysis, I have contributed to background estimation, phase space optimization, and event selection. Additionally, I have contributed to deriving the differential unfolded cross-sections with all relevant systematic and statistical uncertainties used in CP violation search using an effective field theory approach. 
+Since early 2021, I have been a crucial part of the on-shell $ZZ$ CP and polarization analysis team, where the main goal is to extract the fraction of two $Z$ bosons simultaneously longitudinally polarized and search for additional CP violation. Like the $ZZ^*(\rightarrow 4\ell)jj$ analysis, I have contributed to background estimation, phase space optimization, and event selection. Additionally, I have contributed to deriving the differential unfolded cross-sections with all relevant systematic and statistical uncertainties used in CP violation search using an effective field theory approach. 
 
 \textbf{Detector Performance: }
 The training of a particle physicist is incomplete without understanding the detector's performance. Therefore, in 2021 I joined the Tracking Combined Performance group of ATLAS and have contributed to the validation of the performance of the Run-3 tracking reconstruction software in both early Run-3 data and different types of MC simulation. 
 
-Similar to $ZZ(\rightarrow 4\ell)jj$ measurement, most ATLAS physics analyses use the vertex with the highest value of the sum-squared of track's transverse momenta $(\sum_{tracks}{p_{T}^2})$ as the hard scattering vertex of the measurement. However, in processes with softer leptons and invisible tracks (including photons), $\sum_{tracks}{p_{T}^2}$ is inadequate to identify the hard scatter vertex. Therefore, I am currently working on developing an alternative algorithm that is suitable for a variety of different physics processes. 
+Similar to $ZZ^*(\rightarrow 4\ell)jj$ measurement, most ATLAS physics analyses use the vertex with the highest value of the sum-squared of track's transverse momenta $(\sum_{tracks}{p_{T}^2})$ as the hard scattering vertex of the measurement. However, in processes with softer leptons and invisible tracks (including photons), $\sum_{tracks}{p_{T}^2}$ is inadequate to identify the hard scatter vertex. Therefore, I am currently working on developing an alternative algorithm that is suitable for a variety of different physics processes. 
 
 The experiences I have gained in different areas of particle physics have significantly shaped my discussion of the measurement presented in this thesis.  
 
@@ -59,7 +59,7 @@ As discussed in Section \ref{subsec:Bias}, the bias from the unfolding process i
     \caption{ MC-toy-based unfolding bias and statistical uncertainty as a function of several numbers of iterations in each bin of $m_{jj}$ distribution in the VBS-Enhanced region. \label{fig:UnfoldingBiasStat_mjj_VBSEnhanced}}
 \end{figure}
 
-The unfolding bias is expected to converge to a value of zero with a higher number of iterations. However, as observed in Figure \ref{fig:UnfoldingBiasStat_mjj_VBSEnhanced}, the rate of convergence of unfolding bias to zero is lower, suggesting that the fiducial fakes present in the detector level distributions are not fully corrected by the unfolding method. The fiducial fraction, as shown by Figure \ref{fig:UnfoldingInputs}, is usually between $60-80\%$ in this measurement. To confirm that a high fraction of fiducial fakes causes the unfolding bias, these are subtracted manually from the MC predictions of nominal and toy distributions. The MC-toy-based unfolding bias estimate is repeated, and Figure \ref{fig:UnfoldingBias_mjj_VBSEnhanced_noFakes} shows the resulting unfolding bias in each bin of $m_{jj}$ in the VBS-Enhanced region. Compared to the nominal unfolding bias shown in Figure \ref{fig:UnfoldingBias_mjj_VBSEnhanced}, Figure \ref{fig:UnfoldingBias_mjj_VBSEnhanced_noFakes} has a smaller bias in each bin, and the convergence of the bias to zero is faster.
+The unfolding bias is expected to converge to a value of zero with a higher number of iterations. However, as observed in Figure \ref{fig:UnfoldingBiasStat_mjj_VBSEnhanced}, the rate of convergence of unfolding bias to zero is lower, suggesting that the fiducial fakes present in the detector-level distributions are not fully corrected by the unfolding method. The fiducial fraction, as shown by Figure \ref{fig:UnfoldingInputs}, is usually between $60-80\%$ in this measurement. To confirm that a high fraction of fiducial fakes causes the unfolding bias, these are subtracted manually from the MC predictions of nominal and toy distributions. The MC-toy-based unfolding bias estimate is repeated, and Figure \ref{fig:UnfoldingBias_mjj_VBSEnhanced_noFakes} shows the resulting unfolding bias in each bin of $m_{jj}$ in the VBS-Enhanced region. Compared to the nominal unfolding bias shown in Figure \ref{fig:UnfoldingBias_mjj_VBSEnhanced}, Figure \ref{fig:UnfoldingBias_mjj_VBSEnhanced_noFakes} has a smaller bias in each bin, and the convergence of the bias to zero is faster.
 
 \begin{figure}[htb]
     \centering
@@ -91,7 +91,7 @@ The unfolding bias is expected to converge to a value of zero with a higher numb
     \caption{ MC-toy-based unfolding bias in each bin of $m_{jj}$ in the VBS-Enhanced region using Gaussian toys after subtracting the contribution of the fiducial fake events from both nominal and toy MC predictions.\label{fig:UnfoldingBias_mjj_VBSEnhanced_noFakes}}
 \end{figure}
 
-The differential measurements of the $ZZ(\rightarrow 4\ell)jj$ process are statistically limited, so it is impossible to directly subtract the fiducial fakes from data without degrading the statistical precision and adding a new source of systematic uncertainty from the subtraction of fiducial fake events. However, it is imperative to understand the origin and topology of the fiducial fake events to reduce their impact without degrading the unfolding performance. Figures \ref{fig:FidFakespT} and \ref{fig:FidFakeseta} show the fake fraction, the fraction of detector-level events passing detector-level selection but failing the particle-level selection as a function of $p_{T}$ and $\eta$, respectively, for the leading (x-axis) and the sub-leading (y-axis) jets. More significant fractions of fakes are observed in low-$p_{T}$ and high $\eta$ region, which is likely related to the worse resolution of jet reconstruction in low-$p_{T}$ and smaller efficiency of fJVT tagging in forward regions. The large fraction of fiducial fakes is understood to originate either from migrations outside the fiducial volume due to jet resolution effects or from wrongfully selecting events with pile-up jets. More stringer kinematic selections were applied to the leading and sub-leading jets in an attempt to reduce the bias, but this resulted in the degradation of unfolding performance due to low statistics. Therefore, the nominal bias shown in Section \ref{subsec:UnfoldingUnc} was deemed optimal for the measurement. 
+The differential measurements of the $ZZ^*(\rightarrow 4\ell)jj$ process are statistically limited, so it is impossible to directly subtract the fiducial fakes from data without degrading the statistical precision and adding a new source of systematic uncertainty from the subtraction of fiducial fake events. However, it is imperative to understand the origin and topology of the fiducial fake events to reduce their impact without degrading the unfolding performance. Figures \ref{fig:FidFakespT} and \ref{fig:FidFakeseta} show the fake fraction, the fraction of detector-level events passing detector-level selection but failing the particle-level selection as a function of $p_{T}$ and $\eta$, respectively, for the leading (x-axis) and the sub-leading (y-axis) jets. More significant fractions of fakes are observed in low-$p_{T}$ and high $\eta$ region, which is likely related to the worse resolution of jet reconstruction in low-$p_{T}$ and smaller efficiency of fJVT tagging in forward regions. The large fraction of fiducial fakes is understood to originate either from migrations outside the fiducial volume due to jet resolution effects or from wrongfully selecting events with pile-up jets. More stringer kinematic selections were applied to the leading and sub-leading jets in an attempt to reduce the bias, but this resulted in the degradation of unfolding performance due to low statistics. Therefore, the nominal bias shown in Section \ref{subsec:UnfoldingUnc} was deemed optimal for the measurement. 
 
 \begin{figure}[htb]
     \centering
@@ -105,12 +105,12 @@ The differential measurements of the $ZZ(\rightarrow 4\ell)jj$ process are stati
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/FakeFraction_eta_jets.pdf}
         \caption{$\eta$\label{fig:FidFakeseta}}
     \end{subfigure}
-    \caption{ Fraction of fake fiducial events as a function of $p_{T}~\&~\eta$ of the leading (x-axis) and the sub-leading jets (y-axis) in the VBS-Enhanced region.\label{fig:fake_fraction_jets}}
+    \caption{ Fraction of fake fiducial events as a function of $p_{T}\&~\eta$ of the leading (x-axis) and the sub-leading jets (y-axis) in the VBS-Enhanced region.\label{fig:fake_fraction_jets}}
 \end{figure}
 
 \section{VBS-Suppressed Region}
 \label{Appendix:VBSSupRegion}
-This section summarizes the results of the detector level yield and the unfolded differential cross-sections measured in the VBS-Suppressed region. The systematics affecting these results are also discussed briefly.
+This section summarizes the results of the detector-level yield and the unfolded differential cross-sections measured in the VBS-Suppressed region. The systematics affecting these results are also discussed briefly.
 
 \subsection{Systematics}
 \label{appendix:VBSSupSys}
@@ -229,7 +229,7 @@ Figures \ref{fig:reco_VBS_Suppressed_a} and \ref{fig:reco_VBS_Suppressed_b} show
 \subsection{Unfolded Cross-sections}
 \label{appendix:VBSSupUnfolded}
 
-Figures \ref{fig:unfolded_xs_VBS_Suppressed_a} and \ref{fig:unfolded_xs_VBS_Suppressed_b} show the measured unfolded differential cross-sections as a function of the eleven kinematic observables in the VBS-Suppressed region. The unfolded differential cross-sections (black) are compared with two different state-of-the-art SM particle-level predictions, first, where the QCD $qqZZ$ is generated by \textsc{Sherpa} (red) and second, where the QCD $qqZZ$ is generated by \textsc{Madgraph} (blue). The vertical-solid line in the black distribution shows the statistical uncertainty of the unfolded cross-sections, and the black band represents the total systematic uncertainties. Similarly, the dashed-red and dashed-blue bands represent the fiducial uncertainties on the \textsc{Sherpa} and \textsc{Madgraph} particle-level predictions, respectively. Similar to the VBS-Enhanced region, the p-values comparing the unfolded cross-sections with the two SM particle-level predicted cross-sections are estimated. The reported p-values of more than $0.05$ and the ratios of particle level yields to the unfolded-data yields suggest no significant statistical deviations of the differential cross-section from the SM predicted values. Therefore, in the analyzed LHC Run-2 dataset, for the $ZZ (\rightarrow 4) \ell jj$ process, all differential cross-sections in the VBS-Suppressed region are concluded to agree with the SM predictions. 
+Figures \ref{fig:unfolded_xs_VBS_Suppressed_a} and \ref{fig:unfolded_xs_VBS_Suppressed_b} show the measured unfolded differential cross-sections as a function of the eleven kinematic observables in the VBS-Suppressed region. The unfolded differential cross-sections (black) are compared with two different state-of-the-art SM particle-level predictions, first, where the QCD $qqZZ$ is generated by \textsc{Sherpa} (red) and second, where the QCD $qqZZ$ is generated by \textsc{Madgraph} (blue). The vertical-solid line in the black distribution shows the statistical uncertainty of the unfolded cross-sections, and the black band represents the total systematic uncertainties. Similarly, the dashed-red and dashed-blue bands represent the fiducial uncertainties on the \textsc{Sherpa} and \textsc{Madgraph} particle-level predictions, respectively. Similar to the VBS-Enhanced region, the p-values comparing the unfolded cross-sections with the two SM particle-level predicted cross-sections are estimated. The reported p-values of more than $0.05$ and the ratios of particle-level yields to the unfolded-data yields suggest no significant statistical deviations of the differential cross-section from the SM predicted values. Therefore, in the analyzed LHC Run-2 dataset, for the $ZZ^*(\rightarrow 4) \ell jj$ process, all differential cross-sections in the VBS-Suppressed region are concluded to agree with the SM predictions. 
 
 \begin{figure}[!htb]
     \centering
