--- a/sections/Introduction.tex
+++ b/sections/Introduction.tex
@@ -2,8 +2,8 @@
 \label{sec:Introduction}
 Research in particle physics investigates the fundamental nature of the universe. The Standard Model (SM), the fundamental theory of particle physics, provides a theoretical formulation that explains all known elementary particles, their interactions, and three of the four fundamental forces observed in nature; strong, electromagnetic, and weak forces. Fifty years after its formulation, the SM predicted theory parameters are measured experimentally with high precision. The experimental discovery of the Higgs boson in 2012 established SM as a complete and highly successful theory. However, the lack of description of the fourth fundamental force, gravity, and other experimentally evident phenomena, such as the existence of dark matter, infer that the SM is an incomplete description of nature. Still, experimental evidence of new physics beyond the Standard Model (BSM) has yet to be observed. The current primary objective of the Large Hadron Collider (LHC) at CERN is to look for experimental evidence of new physics which might explain or resolve some of the shortcomings of the SM. 
 
-New physics searches can be broadly categorized into two types, direct and indirect. The direct search focuses on finding experimental evidence of new physics signatures directly. In contrast, the indirect approach focuses on precisely measuring the parameters of the SM-predicted processes, looking for deviations compared to the state-of-the-art theoretical predictions. One critical phenomenon of the SM is the vector boson scattering (VBS) in the final state involving multi vector-bosons, electroweak (electromagnetic $\&$ weak) force mediating particles. VBS processes consist of the rare triple and quartic self-couplings between the electroweak force's mediator, whose SM amplitude interferes destructively with the Higgs-mediated processes. Several BSM theories modify either strength of the self-couplings or that of the Higgs-mediated processes, thus, altering the extent of the interference and, consequently, the cross-sections from the predicted value. As many new physics particles are expected to exist at high energies, such deviations are expected to appear at higher energies that haven't been probed experimentally. 
+New physics searches can be broadly categorized into two types, direct and indirect. The direct search focuses on finding experimental evidence of new physics signatures directly. In contrast, the indirect approach focuses on precisely measuring the parameters of the SM-predicted processes, looking for deviations compared to the state-of-the-art theoretical predictions. One critical phenomenon of the SM is the vector boson scattering (VBS) in the final state involving multi vector-bosons, electroweak (EWK) force mediating particles. VBS processes consist of the rare triple and quartic self-couplings between the electroweak force's mediator, whose SM amplitude interferes destructively with the Higgs-mediated processes. Several BSM theories modify either strength of the self-couplings or that of the Higgs-mediated processes, thus, altering the extent of the interference and, consequently, the cross-sections from the predicted value. As many new physics particles are expected to exist at high energies, such deviations are expected to appear at higher energies that haven't been probed experimentally. 
 
-This thesis presents an indirect approach to new physics searches in one of the VBS-sensitive multiboson final states. The measurement analyzes the data collected by the ATLAS experiment of the LHC from 2015-2018 to measure the VBS-sensitive production of two $Z$ bosons in association with two jets, where each $Z$ boson decays into a pair of same-flavor opposite-charge (SF-OC) lepton pair. The quartic self-coupling of the vector bosons in $ZZ(\rightarrow 4\ell)jj$ final state has been experimentally accessible with the collected LHC dataset for the first time. Thus, measurements presented in this thesis are at the frontier of particle physics, pushing the boundaries of new physics searches through an indirect approach. 
+This thesis presents an indirect approach to new physics searches in one of the VBS-sensitive multiboson final states. The measurement analyzes the data collected by the ATLAS experiment of the LHC from 2015-2018 to measure the VBS-sensitive production of two $Z$ bosons in association with two jets, where each $Z$ boson decays into a pair of same-flavor opposite-charge (SF-OC) lepton pair. The quartic self-coupling of the vector bosons in $ZZ^*(\rightarrow 4\ell)jj$ final state has been experimentally accessible with the collected LHC dataset for the first time. Thus, measurements presented in this thesis are at the frontier of particle physics, pushing the boundaries of new physics searches through an indirect approach. 
 
-First, the theory of SM, its shortcomings, and the $ZZ(\rightarrow 4\ell)jj$ process are discussed in Chapter $II$. The LHC and ATLAS experiments are then introduced in Chapter $III$. Chapters $IV$ and $V$ discuss the details of the measurement whose results are presented in Chapter $VI$. 
+First, the theory of SM, its shortcomings, and the $ZZ^*(\rightarrow 4\ell)jj$ process are discussed in Chapter $II$. The LHC and ATLAS experiments are then introduced in Chapter $III$. Chapters $IV$ and $V$ discuss the details of the measurement whose results are presented in Chapter $VI$. 
