--- a/sections/LHC_ATLAS.tex
+++ b/sections/LHC_ATLAS.tex
@@ -5,7 +5,7 @@ A Toroidal LHC ApparatuS (ATLAS) is a general-purpose detector of LHC that detec
 
 The sub-detector closest to the beamline is called \textit{Inner Detector (ID)}, which measures the trajectories of the charged particle and plays a crucial role in identifying the physical position of hard-scattering, also known as the \textit{interaction point (IP)}. ID is surrounded by a solenoid magnet that provides a $2$ T magnetic field to bend the particle trajectories for momentum measurements \cite{ATLAS}. After the solenoid magnet lies the \textit{electromagnetic calorimeter (ECAL)} and then the \textit{hadronic calorimeter (HCAL)}, which measure the energy of electromagnetic and hadronic physics objects, respectively. The outermost layer of the ATLAS detector is the \textit{Muon Spectrometer(MS)} that provides a secondary measure of muon trajectories for its momentum measurement. MS is embedded inside a toroidal magnetic field that provides a magnetic field up to 3.5 T \cite{ATLAS}. Figure \ref{fig:ATLAS} shows a schematic of the ATLAS detector with all its sub-detectors.
 
-\begin{figure}
+\begin{figure}[!htb]
     \centering
     \includegraphics[width=.98\linewidth]{figures/LHC/AtlasDetector.png}
     \caption{ A detailed schematic of the ATLAS detector with all its sub-detectors \cite{ATLAS}.\label{fig:ATLAS}}
@@ -34,7 +34,7 @@ Particles with larger momentum along the \textit{z}-axis have larger values of r
 \end{equation}
 Higher values of rapidity and pseudorapidity refer to the forward region of the detector. ATLAS detector has full $2\pi$ coverage in $\phi$ and maximum coverage up to $|\eta| < 4.5$ corresponding to $1.3^{\circ} < \theta < 178.7^{\circ} $ \cite{ATLAS}. 
 
-\begin{figure}
+\begin{figure}[!htb]
     \centering
     \includegraphics[width=.98\linewidth]{figures/LHC/ATLAS_CoordinateSys.png}
     \caption{ A schematic of the right-handed ATLAS coordinate system \cite{ATLAS_CoordSys}.\label{fig:ATLAS_CS}}
@@ -50,7 +50,7 @@ At a distance about $50$ cm from the beamline lies the outermost layer of the AT
 
 Figure \ref{fig:ATLAS_ID} schematically shows different parts of the inner detector and their distances from the interaction point.
 
-\begin{figure}
+\begin{figure}[!htb]
     \centering
     \includegraphics[width=.98\linewidth]{figures/LHC/ATLAS_InnerDetector.jpg}
     \caption{ A schematic of the inner detector of ATLAS showing the IBL, pixel detectors, SCT, and TRT \cite{ID_Align_Run2}.\label{fig:ATLAS_ID}}
@@ -67,7 +67,7 @@ The hadronic calorimeter surrounds the ECAL and consists of a steel absorber and
 
 Figure \ref{fig:ATLAS_Cals} schematically shows the layout of ATLAS calorimeters. 
 
-\begin{figure}
+\begin{figure}[!htb]
     \centering
     \includegraphics[width=.98\linewidth]{figures/LHC/ATLAS_CALO.jpeg}
     \caption{ A schematic of electromagnetic and hadronic calorimeters In ATLAS \cite{ATLAS}.\label{fig:ATLAS_Cals}}
@@ -77,7 +77,7 @@ Figure \ref{fig:ATLAS_Cals} schematically shows the layout of ATLAS calorimeters
 \label{subsec:MS}
 In ATLAS, muons are deeply-penetrating charged particles that leave minimum ionizing deposits in the calorimeter. The muon spectrometer, the outermost part of the ATLAS detector, tracks trajectories of muons deflected in $0.5$ magnetic field provided by the superconducting toroidal magnets, giving an additional measure of muon's momentum \cite{ATLAS}. The MS tracks muon with $p_{T} > 3$ GeV in $|\eta| < 2.7$ range \cite{ATLAS}. As shown in Figure \ref{fig:ATLAS_MS}, the muon spectrometer comprises four types of detectors; first, the three stations of Monitored Drift Tubes (MDT) in $|\eta| < 2.0$ region followed by the Cathode Strip Chambers (CSC) in  $2.0 < |\eta| < 2.7$ region \cite{ATLAS}. The other two detectors are the Resistive Plate Chambers (RPC) in $|\eta| < 1.05$ and the Thin-gap Chambers (TGC) beyond $|\eta| = 1.05$ comprising the trigger system in MS \cite{ATLAS}. 
 
-\begin{figure}
+\begin{figure}[!htb]
     \centering
     \includegraphics[width=.98\linewidth]{figures/LHC/ATLAS_MS.jpeg}
     \caption{ A schematic of different components of the muon spectrometer in ATLAS \cite{ATLAS}.\label{fig:ATLAS_MS}}
